--- a/src/components/FrontCard.css
+++ b/src/components/FrontCard.css
@@ -1,6 +1,6 @@
 .Card-Container {
     width: 20%;
-    height: 80%;
+    height: 75%;
     background-color: white;
     border-style: solid;
     border-width: 1px;
@@ -18,4 +18,36 @@
     font-size: 22px;
     font-weight: bold;
     margin-left: 5%;
+}
+
+.Small-Images {
+    width: 40%;
+    height: 100%;
+    margin: 5%;
+    float: left;
+}
+
+.Main-Image-Container {
+    width: 100%;
+    height: 100%
+}
+
+.Small-Image-Container {
+    width: 100%;
+    height: 50%;
+    margin-bottom: -15%;
+}
+
+.Image-Container {
+    float: left;
+    height: 50%;
+    /* background-color: grey; */
+    margin-bottom: -15%;
+}
+
+.Image-Labels {
+    float: left;
+    margin: 5%;
+    width: 40%;
+    margin-top: -5%;
 }
