--- a/src/screens/ProductList.css
+++ b/src/screens/ProductList.css
@@ -1,3 +1,6 @@
-.Sub-Domain {
-    color: #477979;
+.Search-Text-Container {
+    margin-left: 5%;
+    float: none;
+    overflow: hidden;
+    
 }
